Jun 05 2005  devel  Fixed segfault on some conditions in kismet_client
                     group management code
                    Fixed segfaults in tcpclient code and corrupted protocol
                     lines (non-exploitable)
                    Added W(O) documentation to client help
Jun 03 2005  devel  Minor code format changes, possible fd-exhaustion bug on 
                     OpenBSD fixed
Jun 02 2005  devel  Removed theoretical loophole in bss-timestamp finitestate
Jun 01 2005  devel  README changes
May 31 2005  devel  Fixed segfault condition in kismet_client caused by the 
                     "powerbar" column or "Signal Levels" window and funny
                     signal levels
                    Added "netfuzzycrypt" option, defaulted to true.  This uses
                     the network classifier to force a fuzzy encryption on
                     unencrypted data frames classified as part of an encrypted
                     network.
                    More fixes to IP handling -- client aggregation works
                     better now when finding a network IP
                    Fixed sigfpu/channel sets for real
May 30 2005  devel  Added 'flite' config parameter for 'festival lite', if
                     using flite instead of festival, set it to true
                    Fixed client signal/noise levels in kismet_client
May 27 2005  devel  Merged README updates and OpenBSD updates from Pedro
                    Merged OpenBSD channel display from pedro
                    Added ipw2915 packet source for centrinto a/g cards.
                     Same as the 2200, just has the default channels set to 
                     include 11a.
                    Fixed sigfpu failure if the default channel sets are
                     missing
                    Added OpenBSD workaround for atheros FCS bytes
May 26 2005  devel  Moved to drone protocol 9.  Drone GPS status is now carried